# capsule_testing

./: CMakeLists.txt  meson.build  pyproject.toml
.github/workflows/: unit-test.yml
src/capsule_bug/: capsule_bug.cc
tests/: test_bug.py
