[build-system]
requires = [
  "scikit-build-core",
  "nanobind",
]
build-backend = "scikit_build_core.build"

[project]
name = 'capsule_bug'
version = '0.0.1'
description = 'MRE for testing bugs between python and nanoarrow'
authors = [
  { name = 'Will Ayd', email='william.ayd@icloud.com' },
]
requires-python = '>=3.9'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering'
]

[tool.cibuildwheel]
build = "cp39-*64 cp310-*64 cp311-*64 cp312-*64"
skip = "*musllinux*"

test-command = "python -m pytest {project}/tests"
test-requires = ["pytest", "pyarrow"]

[tool.cibuildwheel.linux]
repair-wheel-command = """
auditwheel repair -w {dest_dir} {wheel}
"""

[tool.cibuildwheel.macos]
# we do not want delocate to relocate the tableauhyperapi.lib as our CMake
# config already handles that, and the tableauhyperapi.lib necessicates
# the hyper bin being relative to it, which delocate does not know about
repair-wheel-command = """
delocate-listdeps {wheel} && delocate-wheel  --require-archs {delocate_archs} -w {dest_dir} {wheel}
"""

[tool.cibuildwheel.windows]
before-build = "python -m pip install delvewheel"
repair-wheel-command = "python -m delvewheel repair -v --add-path C:/Windows/System32 -w {dest_dir} {wheel}"
